--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 logging.level.com.craftmaster.lds.fgc=DEBUG
+logging.level.org.springframework.messaging.simp.annotation.support.SimpAnnotationMethodMessageHandler=DEBUG
+logging.level.org.springframework.web.socket.messaging.WebSocketAnnotationMethodMessageHandler=DEBUG
 logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats=ERROR
 #logging.level.org.springframework.messaging.simp.broker.SimpleBrokerMessageHandler=DEBUG
 
