--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "deploy": "cp -r dist/fgc/* ../server/src/main/resources/static/",
     "e2e": "ng e2e",
     "format": "prettier --write \"src/**/*.{ts,js,json,html,css,scss}\"",
-    "lint": "ng lint --fix=true --files src/app",
+    "lint-fix": "ng lint --fix=true --files src/app",
+    "lint": "ng lint --files src/app || exit 0",
     "ng": "ng",
     "predeploy": "rimraf ../server/src/main/resources/static/ && mkdirp ../server/src/main/resources/static/",
     "start": "ng serve",
