--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -58,6 +58,12 @@ jobs:
         working-directory: ./server
         run: ./gradlew test check
 
+      - name: Upload Spotbugs Results
+        uses: actions/upload-artifact@v1
+        with:
+          name: Build Files
+          path: server/build/spotbugs/
+
       - name: Gradle Build
         working-directory: ./server
         run: ./gradlew build
