--- a/client/package.json
+++ b/client/package.json
@@ -37,10 +37,12 @@
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@sentry/browser": "5.14.2",
     "@stomp/ng2-stompjs": "7.2.0",
+    "@types/fingerprintjs2": "2.0.0",
     "bootstrap": "4.4.1",
     "browser-image-resizer": "2.1.0",
     "cropperjs": "1.5.6",
     "deep-equal": "2.0.1",
+    "fingerprintjs2": "2.1.0",
     "is-ua-webview": "1.0.1",
     "jquery": "3.4.1",
     "moment": "2.24.0",
