--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.com.craftmaster.lds.fgc=DEBUG
 logging.level.org.springframework.messaging.simp.annotation.support.SimpAnnotationMethodMessageHandler=DEBUG
-logging.level.org.springframework.web.socket.messaging.WebSocketAnnotationMethodMessageHandler=DEBUG
+#logging.level.org.springframework.web.socket.messaging.WebSocketAnnotationMethodMessageHandler=DEBUG
 logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats=ERROR
 #logging.level.org.springframework.messaging.simp.broker.SimpleBrokerMessageHandler=DEBUG
 
@@ -11,6 +11,11 @@ spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/fgc
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 fgc.db.driver=com.impossibl.postgres.jdbc.PGDriver
