Fixing memory leak.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.org.springframework.messaging.simp.annotation.support.SimpAnnotati
 logging.level.org.springframework.web.socket.config.WebSocketMessageBrokerStats=ERROR
 #logging.level.org.springframework.messaging.simp.broker.SimpleBrokerMessageHandler=DEBUG
 
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.session.store-type=jdbc
 
 spring.jpa.open-in-view=false
@@ -12,12 +12,13 @@ spring.jpa.open-in-view=false
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.datasource.platform=postgres
+#spring.datasource.platform=postgres
+#spring.jpa.database=postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5432/fgc
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 fgc.db.driver=com.impossibl.postgres.jdbc.PGDriver
 fgc.db.url=jdbc:pgsql://localhost:5432/fgc
 fgc.db.username=postgres
